M360_Sprint_01b_and_02a_V1.1/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>M360 Purpose</description>
        <label>Account Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M360_Dashboards__c</fullName>
        <description>User selected dashboard tiles will be saved for M360 app</description>
        <label>M360 Dashboards</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>M360_EndDayDate__c</fullName>
        <description>M360 purpose</description>
        <label>M360_EndDayDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RouteKey__c</fullName>
        <description>the field is used as an identifier for mobility routes for sales routes</description>
        <label>RouteKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>M_360 purpose - to send user to Global</description>
        <label>Send To Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Suffix__c</fullName>
        <label>Source_Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Route__c</fullName>
        <description>M360 purpose - To store temporary route id with date selected by user from IOS device</description>
        <label>Temp Route</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Suffix_Global__c</fullName>
        <description>M 360 Purpose - To add suffix next to the username in Global org</description>
        <label>Username Suffix Global</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>